Changelog
==========

0.2
---

- schema TierPrice: renamed min_sale_qty to qty, renamed customer_group to customer_group_id 

- schema: renamed shortdescription to short_description

- schema: use Float instead of Decimal

- Item schema:  price field is now a sequence of WebsitePrice.
    [("de_website", 1)] instead of {default: 1, "websites": [("de_website", 1)]}

- ItemUpdate schema: you cannot update the sku field anymore


0.1
---

-  Initial version